# shorty

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
api/: BUILD.bazel  main.go
api/config/: BUILD.bazel  config.go
api/handler/: BUILD.bazel  url.go
api/public/: BUILD.bazel  index.html  script.js
domain/entities/: BUILD.bazel  url.go
infrastructure/repository/: BUILD.bazel  url_mongo.go
usecase/id_gen/: BUILD.bazel  interface.go  service.go
usecase/url/: BUILD.bazel  interface.go  service.go
